# macro-regime-trader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  workplan.md
.claude/: settings.json
.claude/hooks/: format_python.py
.claude/skills/run-backtest/: SKILL.md
.claude/skills/run-dashboard/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/macro_regime_trader/: cli.py  config.py  logging_config.py  types.py
src/macro_regime_trader/backtest/: analytics.py  benchmarks.py  engine.py
src/macro_regime_trader/core/: macro_engine.py  risk_manager.py  strategies.py
src/macro_regime_trader/dashboard/: app.py
src/macro_regime_trader/data/: provider.py  yfinance_provider.py
src/macro_regime_trader/simulation/: mock_broker.py
tests/: test_backtest.py  test_data_provider.py  test_macro_engine.py  test_mock_broker.py  test_risk_manager.py  test_strategies.py
