[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-regime-trader"
version = "0.1.0"
description = "Quantitative trading simulation engine for macroeconomic regime detection, adaptive allocation, and strict capital preservation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "streamlit>=1.32",
    "matplotlib>=3.8",
    "click>=8.1",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "jupyter>=1.0",
    "nbclient>=0.10",
]

[project.scripts]
mrt = "macro_regime_trader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
